@@ -30,6 +30,9 @@ Trunk (not yet released)
     AVRO-1544. Java: Fix GenericData#validate for unions with null.
     (Matthew Hayes via cutting)
 
+    AVRO-1589. Java: Fix ReflectData.AllowNulls to not create unions
+    for primitive types. (Ryan Blue via cutting)
+
 Avro 1.7.7 (23 July 2014)
 
   NEW FEATURES
